Fixed search results not covering queue placeholder.
Also changed "Uploads" panel to read "Adding Songs".

--- a/less/room.less
+++ b/less/room.less
@@ -319,7 +319,7 @@
           overflow-x: hidden;
           overflow-y: auto;
 
-          & > ul {
+          & > ul:not(#search-results-list) {
             height: 0;
 
             li:last-child {
